Scss added and assigned task done

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,10 +1,11 @@
 @import "colors";
 
-header {
+* {font-family: 'Montserrat', sans-serif;}
+
+header, .album-container {
     background: $bg-color;
 }
 
 main {
     background: $bg-main;
-    color: $color-album-title;
 }
